# grpcmcp

./: .gitignore  .pylintrc  GRPC_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
example/: README.md  grpc_example_client.py  grpc_example_server.py
example/prompts/: client.py  server.py
example/resources/: client.py  server.py
example/tools/: client.py  server.py
src/: mcp_messages_pb2_grpc.py
src/grpcmcp/: __init__.py  adapter.py  client.py  context.py  proto_util.py  server.py
src/grpcmcp/proto/: README.md  __init__.py  mcp_messages_pb2.py  mcp_messages_pb2_grpc.py  mcp_pb2.py  mcp_pb2_grpc.py
tests/: test_client_rpc.py  test_e2e.py  test_server_rpc.py
